# MySQL-AutoXtraBackup

./: .gitignore  Dockerfile  HISTORY.md  LICENSE  LICENSE.txt  Pipfile  README.md  Untitled.ipynb  Vagrantfile  __init__.py  autoxtrabackup.py  docker-compose-test.yaml  docker-compose.yaml  install.sh  mypy.ini  netlify.toml  private_key  pyproject.toml  requirements.txt  setup.py  uninstall.sh
.github/workflows/: publish.yml
api/: main.py
api/controller/: controller.py
backup_backup/: __init__.py  backup_archive.py  backup_builder.py  backuper.py
backup_dir/: README.txt
backup_prepare/: README.md  __init__.py  bck.conf  copy_back.py  prepare.py  prepare_builder.py
changes/: 437-shahriyarr.md  440-shahriyarr.md  442-shahriyarr.md  README.md  make_history.py
docs/: Makefile  README.rst  advance_features.rst  api.rst  backup_tags.rst  basic_features.rst  basic_overview.rst  conf.py  config_file.rst  index.rst  installation.rst  intro.rst  option_reference.rst  test_mode.rst  what_is_new_in_2_0.rst
docs/_build/doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
general_conf/: __init__.py  autoxtrabackup.cnf  bck.conf  check_env.py  generalops.py  generate_default_conf.py  path_config.py
master_backup_script/: README.md  __init__.py  backuper.py  bck.conf  check_env.py  test.py
mysql_autoxtrabackup/: __init__.py  autoxtrabackup.py
mysql_autoxtrabackup/api/: main.py
mysql_autoxtrabackup/backup/: backup_builder.py  backup_tags.py  backuper.py
mysql_autoxtrabackup/backup_backup/: __init__.py  backup_archive.py  backup_builder.py  backup_tags.py  backuper.py
mysql_autoxtrabackup/backup_prepare/: __init__.py  copy_back.py  prepare.py  prepare_builder.py
mysql_autoxtrabackup/common/: helpers.py  mysql_cli.py  version.py
mysql_autoxtrabackup/configs/: check_env.py  generalops.py  generate_default_conf.py  path_config.py
mysql_autoxtrabackup/general_conf/: __init__.py  check_env.py  generalops.py  generate_default_conf.py  path_config.py
mysql_autoxtrabackup/prepare/: __init__.py  prepare.py  prepare_builder.py
mysql_autoxtrabackup/process_runner/: __init__.py  errors.py  process_runner.py
mysql_autoxtrabackup/utils/: helpers.py  mysql_cli.py  version.py
partial_recovery/: README.md  bck.conf  partial.py
prepare_env_test_mode/: build_2.3_pxb.sh  build_2.4_pxb.sh  call_create_index_temp.sh  call_ddl_test.sh  call_innodb_online_alter_encryption_alters.sh  call_innodb_online_alter_encryption_sql.sh  call_temp_table_test.sh  clone_build_start_server.py  config_generator.py  create_index_temp.sh  create_sleep_queries.sh  ddl_test.sh  innodb_online_alter_encryption.sql  innodb_online_alter_encryption_alters.sql  prepare_backup.py  run_benchmark.py  run_sql_queries.sh  runner_test_mode.py  start_dynamic.sh  take_backup.py  temp_table_test.sh  test_check_env.py
process_runner/: errors.py  process_runner.py
scripts/: build-docs.sh  format-imports.sh  format.sh  lint.sh  netlify-docs.sh  publish.sh
scripts/api_calls/: delete_all_backups.sh  get_all_backups.sh  prepare_backup.sh  take_backup.sh
test/: Dockerfile  README.md  conftest.py  docker_all_run.py  docker_dependencies.py  docker_env_for_test.py  docker_reset_mysql_password.py  docker_run_tests.py  prepare_env.bats  requirements.txt  test_backup.bats  test_backup.py  test_build_pxb.bats  test_build_server.bats  test_clone_build_start_server.py  test_clone_percona_qa.bats  test_clone_ps_server_from_conf.bats  test_clone_pxb.bats  test_config_generator.py  test_extract_xb_archive.bats  test_generate_config_files.bats  test_option_combinations.py  test_partialRecovery.py  test_prepare_backup.py  test_prepare_env_test.py  test_prepare_start_dynamic.bats  test_prepare_startup.bats  test_rename_basedirs.bats  test_run_benchmark.py  test_runner_test_mode.py  test_start_server.bats  test_take_backup.py  test_test_prepare_backup.py  test_test_take_backup.py
tests/: Dockerfile  conftest.py  entrypoint.sh  requirements.txt  test_api.py  test_backup.bats  test_backup.py  test_helpers.py  test_mysql_cli.py
utils/: helpers.py  mysql_cli.py
(+1 files in other folders)
