[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mysql_autoxtrabackup"
author = "Shahriyar(Shako) Rzayev"
author-email = "rzayev.sehriyar@gmail.com"
home-page = "https://github.com/ShahriyarR/MySQL-AutoXtraBackup"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

requires = [
    "click >=3.3",
    "pid >=2.0",
    "humanfriendly >=2.0",
]

description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://autoxtrabackup.azepug.az/"

[tool.flit.metadata.requires-extra]
test = [
    "pytest ==5.4.3",
    "pytest-cov ==2.10.0",
    "mypy ==0.812",
    "isort >=5.0.6,<6.0.0",
    "flake8 >=3.8.3,<4.0.0",
    "black ==20.8b1",
]

doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autobuild",
    "jinja2 >=2.11.3"
]

dev = [
    "click >=3.3",
    "pid >=2.0",
    "humanfriendly >=2.0",
    "pytest ==5.4.3",
    "pytest-cov ==2.10.0",
    "mypy ==0.812",
    "isort >=5.0.6,<6.0.0",
    "flake8 >=3.8.3,<4.0.0",
    "black ==20.8b1",
]

all = [
    "click >=3.3",
    "pid >=2.0",
    "humanfriendly >=2.0",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autobuild",
    "jinja2 >=2.11.3"
]

[tool.isort]
profile = "black"
known_third_party = ["click", "pid", "humanfriendly"]

[tool.flit.scripts]
autoxtrabackup = "mysql_autoxtrabackup.autoxtrabackup:all_procedure"