[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mysql_autoxtrabackup"
authors = [{name = "Shako Rzayev", email = "rzayev.sehriyar@gmail.com"}]
readme = "README.md"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "click >=8.0",
    "pid >=2.0",
    "humanfriendly >=2.0",
    "fastapi >= 0.63.0",
    "uvicorn >= 0.13.4",
]


[project.optional-dependencies]
doc = ["mkdocs-material >=8.1.2"]
dev = [
    "black >=22.3.0",
    "pylint >=2.12.2",
    "isort >=5.9.3",
    "autoflake >=1.4",
    "flake8 >=4.0.1",
    "pre-commit >=2.17.0"
    ]
test = [
    "pytest >= 7.1.1"
]

[project.urls]
Documentation = "https://autoxtrabackup.azepug.az/"
Source = "https://github.com/ShahriyarR/MySQL-AutoXtraBackup"
Home = "https://github.com/ShahriyarR/MySQL-AutoXtraBackup"

[project.scripts]
autoxtrabackup = "mysql_autoxtrabackup.autoxtrabackup:all_procedure"

[tool.isort]
profile = "black"
py_version = 38
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
skip_glob = ["docs/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'